amerante font and add files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Nineveh</title>
+    <!-- Google Amarante Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amarante&display=swap" rel="stylesheet"> 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -22,8 +26,8 @@
     <div class="content">
         <img src="imgs/boxart-cropped.png" alt="Nineveh Box Art" class="boxart" />
         <div class="buttons">
-            <a class="btn btn-primary" href="#" role="button"><i class="bi bi-windows"></i> Download for Windows</a>
-            <a class="btn btn-primary" href="#" role="button"><i class="bi bi-apple"></i> Download for Mac</a>
+            <a download class="btn btn-primary" href="/files/WinBuild.zip" role="button"><i class="bi bi-windows"></i> Download for Windows</a>
+            <a download class="btn btn-primary" href="/files/MacBuild.zip" role="button"><i class="bi bi-apple"></i> Download for Mac</a>
         </div>
     </div>
     
