changed to drive file sharing

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="content">
         <img src="imgs/boxart-cropped.png" alt="Nineveh Box Art" class="boxart" />
         <div class="buttons">
-            <a download class="btn btn-primary" href="/files/WinBuild.zip" role="button"><i class="bi bi-windows"></i> Download for Windows</a>
-            <a download class="btn btn-primary" href="/files/MacBuild.zip" role="button"><i class="bi bi-apple"></i> Download for Mac</a>
+            <a download class="btn btn-primary" href="https://drive.google.com/file/d/1IRMYoL5WxPrpiw7BAYKFGrw8qYhl_UqM/view?usp=sharing" role="button"><i class="bi bi-windows"></i> Download for Windows</a>
+            <a download class="btn btn-primary" href="https://drive.google.com/file/d/1IXa5sUp5EYkiw2NJiPIE9AQXhGoP7w1A/view?usp=sharing" role="button"><i class="bi bi-apple"></i> Download for Mac</a>
         </div>
     </div>
     
